# telepathy-vk

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am  org.freedesktop.Telepathy.ConnectionManager.vk.service.in  vk.manager
m4/: Makefile.am  as-ac-expand.m4  as-version.m4  tp-compiler-flag.m4  tp-compiler-warnings.m4  tp-linker-flag.m4
src/: protocol.c  protocol.h  vk-connection-manager.h  vk-contact.h  vk-roster.h
