<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
<head>
<title>telepathy/telepathy-idle - IRC connection manager for Telepathy</title>
<meta name='generator' content='cgit v0.9.0.2-2-gbebe'/>
<meta name='robots' content='index, nofollow'/>
<link rel='stylesheet' type='text/css' href='http://cgit.freedesktop.org/cgit.css'/>
<link rel='alternate' title='Atom feed' href='http://cgit.freedesktop.org/telepathy/telepathy-idle/atom/m4/Makefile.am?h=master' type='application/atom+xml'/>
</head>
<body>
<div id='cgit'><table id='header'>
<tr>
<td class='logo' rowspan='2'><a href='/'><img src='http://cgit.freedesktop.org/logo.png' alt='cgit logo'/></a></td>
<td class='main'><a href='/'>index</a> : <a title='telepathy/telepathy-idle' href='/telepathy/telepathy-idle/'>telepathy/telepathy-idle</a></td><td class='form'><form method='get' action=''>
<select name='h' onchange='this.form.submit();'>
<option value='master' selected='selected'>master</option>
</select> <input type='submit' name='' value='switch'/></form></td></tr>
<tr><td class='sub'>IRC connection manager for Telepathy</td><td class='sub right'>root</td></tr></table>
<table class='tabs'><tr><td>
<a href='/telepathy/telepathy-idle/'>summary</a><a href='/telepathy/telepathy-idle/refs/'>refs</a><a href='/telepathy/telepathy-idle/log/m4/Makefile.am'>log</a><a class='active' href='/telepathy/telepathy-idle/tree/m4/Makefile.am'>tree</a><a href='/telepathy/telepathy-idle/commit/m4/Makefile.am'>commit</a><a href='/telepathy/telepathy-idle/diff/m4/Makefile.am'>diff</a></td><td class='form'><form class='right' method='get' action='/telepathy/telepathy-idle/log/m4/Makefile.am'>
<select name='qt'>
<option value='grep'>log msg</option>
<option value='author'>author</option>
<option value='committer'>committer</option>
<option value='range'>range</option>
</select>
<input class='txt' type='text' size='10' name='q' value=''/>
<input type='submit' value='search'/>
</form>
</td></tr></table>
<div class='path'>path: <a href='/telepathy/telepathy-idle/tree/'>root</a>/<a href='/telepathy/telepathy-idle/tree/m4'>m4</a>/<a href='/telepathy/telepathy-idle/tree/m4/Makefile.am'>Makefile.am</a></div><div class='content'>blob: 259e3c321e4bf6b77ee2a326efa8bf73c3e80ea6 (<a href='/telepathy/telepathy-idle/plain/m4/Makefile.am'>plain</a>)
<table summary='blob content' class='blob'>
<tr><td class='linenumbers'><pre><a class='no' id='n1' name='n1' href='#n1'>1</a>
<a class='no' id='n2' name='n2' href='#n2'>2</a>
<a class='no' id='n3' name='n3' href='#n3'>3</a>
<a class='no' id='n4' name='n4' href='#n4'>4</a>
</pre></td>
<td class='lines'><pre><code>EXTRA_DIST = \
as-compiler-flag.m4 \
as-version.m4 \
as-ac-expand.m4
</code></pre></td></tr></table>
</div> <!-- class=content -->
<div class='footer'>generated  by cgit v0.9.0.2-2-gbebe at 2013-08-15 07:39:45 (GMT)</div>
</div> <!-- id=cgit -->
</body>
</html>
